--- a/style.css
+++ b/style.css
@@ -762,6 +762,7 @@ html p, body p {
     margin-right: 10px;
     color: #fa6f1c;
     border: 2px solid #fa6f1c;
+    font-weight: bold;
 }
 #more:hover{
     background-color:#fa6f1c;
@@ -769,7 +770,7 @@ html p, body p {
 }
 /* causes---------------------------------------------------------------------------------------------------------- */
 .mainImage2 img {
-    max-width: 100%;
+    width: 100%;
     height: 200px;
 }
 .mainImage1Txt2 {
@@ -935,7 +936,11 @@ html p, body p {
     width: 80%;
     height: auto;
 }
-
+.imgtxt2{
+    color: white;
+    max-width: 100%;
+    align-items: baseline;
+}
 
 
 
